@@ -875,6 +875,7 @@ _edje_part_description_alloc(unsigned char type, const char *collection, const c
 
    switch (type)
      {
+      case EDJE_PART_TYPE_VIRTUAL:
       case EDJE_PART_TYPE_RECTANGLE:
       case EDJE_PART_TYPE_SWALLOW:
       case EDJE_PART_TYPE_GROUP:
@@ -3023,6 +3024,7 @@ st_collections_group_parts_part_name(void)
             @li TABLE
             @li EXTERNAL
 	    @li PROXY
+	    @li VIRTUAL
     @endproperty
 */
 static void
@@ -3044,6 +3046,7 @@ st_collections_group_parts_part_type(void)
                      "TABLE", EDJE_PART_TYPE_TABLE,
                      "EXTERNAL", EDJE_PART_TYPE_EXTERNAL,
                      "PROXY", EDJE_PART_TYPE_PROXY,
+		     "VIRTUAL", EDJE_PART_TYPE_VIRTUAL,
                      NULL);
 
    /* handle type change of inherited part */
@@ -4379,6 +4382,7 @@ st_collections_group_parts_part_description_inherit(void)
    ed->color_class = STRDUP(ed->color_class);
    switch (ep->type)
      {
+      case EDJE_PART_TYPE_VIRTUAL:
       case EDJE_PART_TYPE_RECTANGLE:
       case EDJE_PART_TYPE_SWALLOW:
       case EDJE_PART_TYPE_GROUP:
@@ -4610,6 +4614,14 @@ static void
 st_collections_group_parts_part_description_visible(void)
 {
    check_arg_count(1);
+
+   if (current_part->type == EDJE_PART_TYPE_VIRTUAL)
+     {
+       ERR("%s: Error. parse error %s:%i. "
+	   "VIRTUAL part can't have a visibility defined",
+	   progname, file_in, line - 1);
+       exit(-1);
+     }
 
    current_desc->visible = parse_bool(0);
 }
@@ -4843,6 +4855,14 @@ st_collections_group_parts_part_description_color_class(void)
 {
    check_arg_count(1);
 
+   if (current_part->type == EDJE_PART_TYPE_VIRTUAL)
+     {
+       ERR("%s: Error. parse error %s:%i. "
+	   "VIRTUAL part can't have a color defined",
+	   progname, file_in, line - 1);
+       exit(-1);
+     }
+
    current_desc->color_class = parse_str(0);
 }
 
@@ -4860,6 +4880,14 @@ static void
 st_collections_group_parts_part_description_color(void)
 {
    check_arg_count(4);
+
+   if (current_part->type == EDJE_PART_TYPE_VIRTUAL)
+     {
+       ERR("%s: Error. parse error %s:%i. "
+	   "VIRTUAL part can't have a color defined",
+	   progname, file_in, line - 1);
+       exit(-1);
+     }
 
    current_desc->color.r = parse_int_range(0, 0, 255);
    current_desc->color.g = parse_int_range(1, 0, 255);
@@ -4881,6 +4909,14 @@ static void
 st_collections_group_parts_part_description_color2(void)
 {
    check_arg_count(4);
+
+   if (current_part->type == EDJE_PART_TYPE_VIRTUAL)
+     {
+       ERR("%s: Error. parse error %s:%i. "
+	   "VIRTUAL part can't have a color defined",
+	   progname, file_in, line - 1);
+       exit(-1);
+     }
 
    current_desc->color2.r = parse_int_range(0, 0, 255);
    current_desc->color2.g = parse_int_range(1, 0, 255);
