@@ -7,6 +7,8 @@ Additions:
     * Add edje_watch to monitore change on edje source.
     * Emit ['edje,change,file', 'edje'] when the file change on disk.
     * edje_player will automatically reload the file when it change on disk.
+    * Add VIRTUAL part. This part are not putting anything into the canvas. So lighter and faster to
+    process (Use it to replace RECT part that are never visible and never catch any event).
 
 Improvements:
     * Allocate once and reuse Evas_Map.
